# f77ex

./: .gitignore  CMakeLists.txt  README.macos.org  README.org  build-and-repair.bash  build-and-test.bash  build-install-test.bash  docker-build.bash  example.f  example.pyf  pyproject.toml  readme.org
.github/workflows/: build.yml  cibuildwheel.yml  editable.yml  macos.yml  windows.yml
.github/workflows.disabled/: cibuildwheel.yml  manylinux.yml
ci/: build-and-repair.bash  cibw.bash  docker-build.bash
f77ex/: __init__.py
f77ex/src/: example.pyf
f77ex/test/: test_mat_det.py
foo/: __init__.py
foo/src/: example.pyf
foo/test/: test_mat_det.py
scipy-openblas-symbols/: README.org  generate_def.py  manual_wrappers.txt  scipy-openblas-symbols.def
tools/: build-and-repair.bash  build-macos.bash  check_det.py  cibw_before_build_macos.sh  cibw_repair_wheel_macos.sh  delvewheel_wrapper.py  inplace-build.bash  manylinux-build.bash
