[build-system]
requires = ["scikit-build-core", "numpy", "scipy_openblas32"]
build-backend = "scikit_build_core.build"

[project]
name = "f77ex"
version = "0.0.1"
dependencies = ["numpy"]

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"

# [tool.cibuildwheel.windows]
# before-all = "pip install scipy_openblas32"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "pip install scipy_openblas32",
  "LD_LIBRARY_PATH=$(python -c \"import scipy_openblas32; import os.path; print(scipy_openblas32.get_lib_dir())\")",
  "auditwheel repair -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = [
  "pip install scipy_openblas32 delvewheel",
  # bash? does PATH work?
  "PATH=$PATH:$(python -c \"import scipy_openblas32; import os.path; print(scipy_openblas32.get_lib_dir())\")",
  "delvewheel repair -w {dest_dir} {wheel}"
]
